# eeve

./: .gitignore  .pre-commit-config.yaml  =3.16.1  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
_my_configs/: minhash_dedublication.yaml  sentence_dedublication.yaml
bench/chv/: README.md  answers.csv
configs/: colab.yaml  minhash_dedublication.yaml  sentence_dedublication.yaml  st_hydra_config.yaml
eeve/: files.py
eeve/callbacks/: trainable_params.py
eeve/configs/: bt_config.py  eeve_config.py
eeve/data/: heuristics.py  lid.py  lid_datatrove.py  quotation_repair.py
eeve/data/align_pairs/: train_emb.py
eeve/data/dedup/: __init__.py  internal_minhash_dedup.py  minhash_dedup.py  semantic_dedup.py  sentence_dedup.py
eeve/data/filters/: __init__.py  bad_translations_filter.py  length_ratio_filter.py  lid.py  regex_counter.py
eeve/data/formatters/: __init__.py  base.py  callable.py  ftfy.py  quote.py
eeve/data/notebooks/: kid.ipynb  lid_test.ipynb  minhash_test.ipynb
eeve/inference/: batched_generation.py
eeve/inference/infinity/: Dockerfile  docker-compose.yml  requirements.txt  schema.py  start_server.py
eeve/tokenization/: README.md  __init__.py  calc_freqs_from_unigram.py  model_reinit.py  spm_merge.py  spm_shrink.py  spm_train.py
eeve/trainers/: bt_trainer.py  eeve_trainer.py  train_emb.py
eeve/utils/: __init__.py  count_stats.py  dataset.py  datasets.py  datasets_utils.py  datatrove.py  find_layers.py  list_utils.py  logger.py  me5.py  model_reinit.py  preprocess.py  seed.py  sentence_transformers.py  stat_storage.py  tok_utils.py  tokenizer_calc_stats.py  tokenizer_count_stats.py  vis_helper.py
examples/: baseline_nllb_finetune.ipynb  calc_tokenizer_stats.ipynb  parallel_corpus_process.ipynb
examples/files/: parallel_corpus_process.csv
examples/logs/2025-08-19_19-30-17_zjwxq/: executor.json
examples/logs/2025-08-19_19-30-17_zjwxq/stats/: 00000.json
examples/logs/2025-08-19_19-45-17_jkrwd/: executor.json  stats.json
examples/logs/2025-08-19_22-34-49_pcnff/: executor.json  stats.json
examples/logs/2025-08-24_13-54-09_smhks/: executor.json
examples/logs/2025-08-24_13-54-09_smhks/stats/: 00000.json
outputs/2025-08-26/18-14-37/.hydra/: hydra.yaml
outputs/2025-08-26/18-23-22/.hydra/: config.yaml  hydra.yaml
tests/: test_filters.py  test_formatters.py  utils.py
training_configs/: colab.yaml  st_hydra_config.yaml
