[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eeve"
version = "0.1.0"
description = "Eeve: a toolkit for data processing and training machine translation models"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=3.2.0",
    "datatrove[io,processing]",
    "deepspeed==0.14.5; sys_platform == 'linux'",
    "faiss-cpu",
    "fasttext-numpy2-wheel",
    "huggingface-hub>=0.34.4",
    "hydra-core>=1.3.2",
    "liger-kernel>=0.5.10",
    "numpy>=2.0.0",
    "openai>=2.3.0",
    "PyYAML>=5.1.0",
    "rich",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.0",
    "tf-keras>=2.20.1",
    "tokenizers==0.21.0",
    "tqdm",
    "transformers<=4.53.3",
    "trl==0.19.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff==0.14.6"
]
test = [
    "pytest==8.4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eeve*"]

[tool.ruff]
extend-exclude = ["*.ipynb"]
lint.ignore = [
    "C901", # `function_name` is too complex
    "E501", # line length violation
    "E741" # Ambiguous variable name
]
lint.select = [
    "C",
    "E",
    "F",
    "I",
    "W",
    "NPY201", # numpy 2.0.0
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401" # module imported but unused
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = [
    "eeve"
]
known-third-party = ["datasets"]
